--- a/assets/css/_global.scss
+++ b/assets/css/_global.scss
@@ -1,25 +1,46 @@
-@font-face {
-    font-family: "ExpoArabic";
-    src: url(../fonts/ExpoArabic/ExpoArabic-Medium.ttf);
-    font-weight: 700;
+html[dir="rtl"] {
+    @font-face {
+        font-family: "ExpoArabic";
+        src: url(../fonts/ExpoArabic/ExpoArabic-Medium.ttf);
+        font-weight: 700;
+    }
+    
+    @font-face {
+        font-family: "ExpoArabic";
+        src: url(../fonts/ExpoArabic/ExpoArabic-Book.ttf);
+        font-weight: 500;
+    }
+    
+    @font-face {
+        font-family: "ExpoArabic";
+        src: url(../fonts/ExpoArabic/ExpoArabic-SemiBold.ttf);
+        font-weight: 900;
+    }
 }
 
-@font-face {
-    font-family: "ExpoArabic";
-    src: url(../fonts/ExpoArabic/ExpoArabic-Book.ttf);
-    font-weight: 500;
-}
-
-@font-face {
-    font-family: "ExpoArabic";
-    src: url(../fonts/ExpoArabic/ExpoArabic-SemiBold.ttf);
-    font-weight: 900;
+html[dir="ltr"] {
+    @font-face {
+        font-family: "roboto";
+        src: url(../fonts/roboto/Roboto-Medium.ttf);
+        font-weight: 700;
+    }
+    
+    @font-face {
+        font-family: "roboto";
+        src: url(../fonts/roboto/Roboto-Regular.ttf);
+        font-weight: 500;
+    }
+    
+    @font-face {
+        font-family: "roboto";
+        src: url(../fonts/roboto/Roboto-Bold.ttf);
+        font-weight: 900;
+    }
 }
 
 * {
     margin: 0px;
     box-sizing: border-box;
-    font-family: "ExpoArabic" , sans-serif ;
     scroll-behavior: smooth;
 
     &::selection{
