--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,50 @@
 @font-face {
-  font-family: "ExpoArabic";
-  src: url(../fonts/ExpoArabic/ExpoArabic-Medium.ttf);
-  font-weight: 700;
+  html[dir=rtl] {
+    font-family: "ExpoArabic";
+    src: url(../fonts/ExpoArabic/ExpoArabic-Medium.ttf);
+    font-weight: 700;
+  }
 }
 @font-face {
-  font-family: "ExpoArabic";
-  src: url(../fonts/ExpoArabic/ExpoArabic-Book.ttf);
-  font-weight: 500;
+  html[dir=rtl] {
+    font-family: "ExpoArabic";
+    src: url(../fonts/ExpoArabic/ExpoArabic-Book.ttf);
+    font-weight: 500;
+  }
 }
 @font-face {
-  font-family: "ExpoArabic";
-  src: url(../fonts/ExpoArabic/ExpoArabic-SemiBold.ttf);
-  font-weight: 900;
+  html[dir=rtl] {
+    font-family: "ExpoArabic";
+    src: url(../fonts/ExpoArabic/ExpoArabic-SemiBold.ttf);
+    font-weight: 900;
+  }
 }
+
+@font-face {
+  html[dir=ltr] {
+    font-family: "roboto";
+    src: url(../fonts/roboto/Roboto-Medium.ttf);
+    font-weight: 700;
+  }
+}
+@font-face {
+  html[dir=ltr] {
+    font-family: "roboto";
+    src: url(../fonts/roboto/Roboto-Regular.ttf);
+    font-weight: 500;
+  }
+}
+@font-face {
+  html[dir=ltr] {
+    font-family: "roboto";
+    src: url(../fonts/roboto/Roboto-Bold.ttf);
+    font-weight: 900;
+  }
+}
+
 * {
   margin: 0px;
   box-sizing: border-box;
-  font-family: "ExpoArabic", sans-serif;
   scroll-behavior: smooth;
 }
 *::-moz-selection {
