--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1011,6 +1011,104 @@ button {
     background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
   }
 }
+@-webkit-keyframes loaderSlideDown {
+  0% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(100%);
+    display: none;
+  }
+}
+@keyframes loaderSlideDown {
+  0% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(100%);
+    display: none;
+  }
+}
+@-webkit-keyframes colors {
+  0% {
+    stroke: var(--light-color);
+  }
+  25% {
+    stroke: var(--primary-color);
+  }
+  50% {
+    stroke: #F7C223;
+  }
+  75% {
+    stroke: var(--primary-color);
+  }
+  100% {
+    stroke: var(--light-color);
+  }
+}
+@keyframes colors {
+  0% {
+    stroke: var(--light-color);
+  }
+  25% {
+    stroke: var(--primary-color);
+  }
+  50% {
+    stroke: #F7C223;
+  }
+  75% {
+    stroke: var(--primary-color);
+  }
+  100% {
+    stroke: var(--light-color);
+  }
+}
+@-webkit-keyframes dash {
+  0% {
+    stroke-dashoffset: 187;
+  }
+  50% {
+    stroke-dashoffset: 46.75;
+    transform: rotate(135deg);
+  }
+  100% {
+    stroke-dashoffset: 187;
+    transform: rotate(450deg);
+  }
+}
+@keyframes dash {
+  0% {
+    stroke-dashoffset: 187;
+  }
+  50% {
+    stroke-dashoffset: 46.75;
+    transform: rotate(135deg);
+  }
+  100% {
+    stroke-dashoffset: 187;
+    transform: rotate(450deg);
+  }
+}
+@-webkit-keyframes rotator {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(270deg);
+  }
+}
+@keyframes rotator {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(270deg);
+  }
+}
 :root {
   --primary-color: #F15921;
   --seconday-color: #F3F3F3;
@@ -1161,7 +1259,7 @@ html[dir=rtl] .selling .selling-list li a::before {
 }
 .product-box .content .head {
   font-size: 15px;
-  font-weight: 700;
+  font-weight: 500;
   color: var(--dark-color);
   display: flex;
   margin-bottom: 14px;
@@ -1175,7 +1273,7 @@ html[dir=rtl] .selling .selling-list li a::before {
 .product-box .content .flex-data p {
   color: var(--dark-color);
   font-size: 18px;
-  font-weight: 900;
+  font-weight: 500;
   margin: 0px;
   width: -webkit-fit-content;
   width: -moz-fit-content;
@@ -1216,7 +1314,7 @@ html[dir=rtl] .selling .selling-list li a::before {
 }
 .heading h1 {
   font-size: 35px;
-  font-weight: 900;
+  font-weight: 500;
   color: var(--dark-color);
   margin: 0px;
 }
@@ -1370,7 +1468,7 @@ html[dir=rtl] .selling .selling-list li a::before {
 }
 .navbar .top-nav .content .lang-contain .lang {
   font-size: 15px;
-  font-weight: 700;
+  font-weight: 500;
   color: var(--dark-color);
 }
 .navbar .top-nav .content .lang-contain .lang:hover {
@@ -1700,7 +1798,7 @@ html[dir=rtl] .selling .selling-list li a::before {
 .modal-body .contain h1 {
   color: var(--primary-color);
   font-size: 20px;
-  font-weight: 900;
+  font-weight: 500;
   margin-bottom: 20px;
 }
 .modal-body .contain p {
@@ -1734,23 +1832,32 @@ html[dir=rtl] .selling .selling-list li a::before {
   justify-content: space-around;
 }
 .mobile-nav li a {
-  width: 40px;
-  height: 40px;
-  background-color: var(--primary-color);
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 3px 5px;
   display: flex;
   align-content: center;
   align-items: center;
   justify-content: center;
   border-radius: 4px;
+  background-color: rgba(241, 89, 33, 0.8);
 }
 .mobile-nav li a img {
-  width: 24px;
-  height: 24px;
+  width: 16px;
+  height: 16px;
   -o-object-fit: contain;
      object-fit: contain;
+  -webkit-margin-end: 5px;
+          margin-inline-end: 5px;
 }
 .mobile-nav li a img.filter {
   filter: var(--light-filter);
+}
+.mobile-nav li a span {
+  font-size: 14px;
+  font-weight: 500;
+  color: var(--light-color);
 }
 
 header {
@@ -1767,14 +1874,14 @@ header .content {
 }
 header .content h1 {
   font-size: 40px;
-  font-weight: 900;
+  font-weight: 500;
   color: var(--dark-color);
   margin-bottom: 30px;
 }
 header .content h1 span {
   color: var(--primary-color);
   font-size: 40px;
-  font-weight: 900;
+  font-weight: 500;
 }
 header .content .button-contain {
   display: flex;
@@ -1949,14 +2056,14 @@ header .image-content img {
 }
 .screen .content h1 {
   font-size: 40px;
-  font-weight: 900;
+  font-weight: 500;
   color: var(--dark-color);
   margin-bottom: 30px;
 }
 .screen .content h1 span {
   color: var(--primary-color);
   font-size: 40px;
-  font-weight: 900;
+  font-weight: 500;
 }
 .screen .content p {
   color: var(--dark-color);
@@ -2041,7 +2148,7 @@ header .image-content img {
 .notification .notification-image h1 {
   color: var(--primary-color);
   font-size: 25px;
-  font-weight: 900;
+  font-weight: 500;
   margin: 0px;
 }
 .notification .box {
@@ -2075,7 +2182,7 @@ header .image-content img {
 .notification .box .content h1 {
   color: var(--primary-color);
   font-size: 22px;
-  font-weight: 900;
+  font-weight: 500;
   margin-bottom: 20px;
 }
 .notification .box .content p {
@@ -2124,7 +2231,7 @@ header .image-content img {
 .login-page .form-contain .login-head h1 {
   color: var(--dark-color);
   font-size: 25px;
-  font-weight: 900;
+  font-weight: 500;
 }
 .login-page .form-contain p {
   color: var(--dark-color);
@@ -2169,7 +2276,7 @@ header .image-content img {
 }
 .login-page .form-contain .form-group label {
   font-size: 15px;
-  font-weight: 700;
+  font-weight: 500;
   display: block;
   margin-bottom: 10px;
   color: var(--dark-color);
@@ -2223,12 +2330,12 @@ header .image-content img {
   text-align: center;
   margin-top: 20px;
   font-size: 20px;
-  font-weight: 700;
+  font-weight: 500;
 }
 .login-page .form-contain .account span {
   color: var(--primary-color);
   font-size: 20px;
-  font-weight: 700;
+  font-weight: 500;
   -webkit-margin-start: 10px;
           margin-inline-start: 10px;
 }
@@ -2246,7 +2353,7 @@ header .image-content img {
 .login-page .form-contain .contain .data h2 {
   color: var(--dark-color);
   font-size: 25px;
-  font-weight: 900;
+  font-weight: 500;
   margin-bottom: 15px;
 }
 .login-page .form-contain .contain .data p {
@@ -2348,7 +2455,7 @@ header .image-content img {
 .selling .sellect-box .head h2 {
   color: var(--primary-color);
   font-size: 20px;
-  font-weight: 700;
+  font-weight: 500;
   margin: 0px;
 }
 .selling .sellect-box .box {
@@ -2372,7 +2479,7 @@ header .image-content img {
   color: var(--dark-color);
   font-size: 18px;
   margin: 0px !important;
-  font-weight: 700;
+  font-weight: 500;
   text-align: center;
   padding: 15px 0px;
   background-color: var(--light-color);
@@ -2394,7 +2501,7 @@ header .image-content img {
 }
 .ads .form-contain .form-group label {
   font-size: 15px;
-  font-weight: 700;
+  font-weight: 500;
   display: block;
   margin-bottom: 10px;
   color: var(--dark-color);
@@ -2463,6 +2570,9 @@ header .image-content img {
   border: 2px solid rgba(241, 89, 33, 0.5);
   border-radius: 10px;
   cursor: pointer;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 .ads .upload-image input {
   display: none;
@@ -2488,7 +2598,7 @@ header .image-content img {
   top: 10px;
   right: 20px;
   z-index: 9;
-  display: flex;
+  display: none;
 }
 .ads .upload-image .close img {
   width: 100%;
@@ -2584,7 +2694,7 @@ header .image-content img {
 .single-project .data-contain .head h1 {
   color: var(--dark-color);
   font-size: 20px;
-  font-weight: 700;
+  font-weight: 500;
   margin: 0px;
 }
 .single-project .data-contain .details {
@@ -2596,7 +2706,7 @@ header .image-content img {
 .single-project .data-contain .details h2 {
   color: var(--light-color);
   font-size: 18px;
-  font-weight: 700;
+  font-weight: 500;
   margin: 0px;
 }
 .single-project .data-contain p {
@@ -2621,7 +2731,7 @@ header .image-content img {
 .single-project .data-contain .data li .name {
   color: var(--primary-color);
   font-size: 15px;
-  font-weight: 700;
+  font-weight: 500;
   -webkit-margin-end: 15px;
           margin-inline-end: 15px;
 }
@@ -2648,7 +2758,7 @@ header .image-content img {
 }
 .single-project .box .flex-data .head {
   font-size: 20px;
-  font-weight: 700;
+  font-weight: 500;
   color: var(--dark-color);
   margin: 0px;
 }
@@ -2726,7 +2836,7 @@ header .image-content img {
 }
 .single-project .box .flex-shape .flex-shape-contain h3 {
   font-size: 15px;
-  font-weight: 700;
+  font-weight: 500;
   color: var(--primary-color);
   margin-bottom: 10px;
 }
@@ -2780,6 +2890,10 @@ footer {
 footer .content {
   width: 100%;
 }
+footer .content.padding-contain {
+  -webkit-padding-start: 100px;
+          padding-inline-start: 100px;
+}
 footer .content .brand-name img {
   width: 120px;
   height: 100px;
@@ -2832,6 +2946,50 @@ footer .content .links li a {
 }
 footer .content .links li a:hover {
   color: var(--primary-color) !important;
+}
+
+.loader-data {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+}
+.loader-data .spinner {
+  -webkit-animation: rotator 1.4s linear infinite;
+          animation: rotator 1.4s linear infinite;
+}
+.loader-data .path {
+  stroke-dasharray: 187;
+  stroke-dashoffset: 0;
+  transform-origin: center;
+  -webkit-animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
+          animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
+}
+
+.loader {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999999;
+  background-color: var(--dark-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+.loader .spinner {
+  -webkit-animation: rotator 1.4s linear infinite;
+          animation: rotator 1.4s linear infinite;
+}
+.loader .path {
+  stroke-dasharray: 187;
+  stroke-dashoffset: 0;
+  transform-origin: center;
+  -webkit-animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
+          animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
 }
 
 @media (max-width: 999px) {
@@ -2912,5 +3070,9 @@ footer .content .links li a:hover {
   html[dir=rtl] .navbar .bottom-nav.active-nav {
     right: 0px !important;
     left: unset !important;
+  }
+  footer .content.padding-contain {
+    -webkit-padding-start: 0px !important;
+            padding-inline-start: 0px !important;
   }
 }/*# sourceMappingURL=style.css.map */
