--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -51,6 +51,11 @@ html[dir="rtl"] {
     right: unset !important;
     left: 10px !important;
   }
+
+  .navbar .top-nav .content .flex-data .search-box .drop-list-shape .drop-name::after {
+    right: unset !important;
+    left: 10px !important;
+  }
 }
 
 .custom-btn {
@@ -358,7 +363,7 @@ html[dir="rtl"] {
               padding: 0px 10px;
 
               &::after {
-                right: 10px;
+                right: 10px !important;
               }
 
               span {
