--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1489,7 +1489,10 @@ left: 10px !important;
   position: relative;
   z-index: 9;
 }
-
+.general-sectionNew{
+  padding: 40px 0px  !important;
+  margin-bottom: 100px;
+}
 .product-box {
   width: 100%;
   border-radius: 16px;
@@ -2725,6 +2728,9 @@ header .image-content img {
   padding: 40px 0px;
   background-color: var(--seconday-color);
 }
+.sub-headerNew {
+padding: 20px 0px;
+}
 .sub-header .heading {
   width: -webkit-fit-content;
   width: -moz-fit-content;
@@ -2735,7 +2741,48 @@ header .image-content img {
   -webkit-padding-end: 20px;
   padding-inline-end: 20px;
 }
+.sub-header .heading_new {
+border: none !important;
 
+}
+.heading_new {
+  border: none !important;
+  padding: 0;
+  margin: 0px 0px 10px;
+  }
+
+  .heading_new .blog_dec {
+display: flex;
+flex-direction: column;
+gap: 30px;
+  }
+  .blog_dec p{
+    font-size: 18px;
+    font-weight: 400;
+}
+.uploaded{
+font-size: 16px;
+color: #707070;
+margin-bottom: 20px;
+font-weight: 400;
+}
+.uploaded span{
+  color: #0387B2;
+}
+.headingH3{
+  font-size: 20px ;
+  color: #5C5C5C;
+  margin-bottom: 20px;
+font-weight: 400;
+
+}
+.img_blog{
+  max-height: 430px;
+  width: 100%;
+  object-fit: cover;
+  border-radius:8px ;
+  margin-bottom: 30px;
+}
 .products .search-box {
   width: 100%;
   height: 40px;
